[package]
name = "rtasks"
version = "0.1.0"
authors = ["wbeyda <github.com/wbeyda>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
ansi_term = "0.12"
clap = "2.33.3"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.25.3"
